Fix layout issue on profile page
Problem: On the confession create section each card had a different height
Why: Each card, which is a flex item, was vertically aligned to the top
instead of stretching. Furthermore the options were not aligned to the
bottom of each card, because I did not set a margin top
Fix: Stretch each item to be the height of it's container and set a margin
top of auto for each option

--- a/css/profile.css
+++ b/css/profile.css
@@ -50,7 +50,6 @@ main {
   flex: 0 0 70%;
   display: flex;
   flex-flow: row wrap;
-  align-items: flex-start;
   column-gap: 5%;
   row-gap: 30px;
   height: auto;
@@ -68,7 +67,7 @@ main {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  /* margin-top: auto; */
+  margin-top: auto;
 }
 .update {
   padding: 0;
